<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background_round_border"
    android:padding="16dp">

   <androidx.appcompat.widget.AppCompatTextView
       android:layout_width="match_parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:text="@string/face_id_title"
       android:gravity="center"
       android:id="@+id/face_id_title"
       android:textSize="@dimen/_16sdp"
       android:textColor="@color/black"
       android:fontFamily="@font/inter_bold"
       android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/face_id_title"
        android:text="@string/face_id_subtitle"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:id="@+id/face_id_subtitle"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_semibold"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@color/thin_gray"
        android:id="@+id/view1"
        app:layout_constraintTop_toBottomOf="@+id/face_id_subtitle"
        android:layout_height="@dimen/_1sdp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/lyt_button"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:text="@string/dont_allow"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/dontallow_btn"
            android:textSize="@dimen/_17sdp"
            android:textColor="@color/button_txt"
            android:fontFamily="@font/inter_medium"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/_30sdp"
            android:background="@color/thin_gray"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:text="@string/allow"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/allow_btn"
            android:textSize="@dimen/_17sdp"
            android:textColor="@color/button_txt"
            android:fontFamily="@font/inter_medium"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/lyt_button"
        android:background="@color/thin_gray"/>
</androidx.constraintlayout.widget.ConstraintLayout>
