<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.login.LoginByMobileNumber">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/actionbar_lyt"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/secondary_lyt"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/_35sdp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="@dimen/_35sdp"
            android:id="@+id/back_arrow"
            android:layout_margin="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/left_arrow"/>
        <TextView
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_arrow"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:id="@+id/title"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/login_to_your_account"/>

        <TextView
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:id="@+id/subtitle"
            android:fontFamily="@font/inter_regular"
            android:text="@string/enter_your_emailaddress"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_100sdp"
        android:id="@+id/secondary_lyt"
        android:background="@drawable/background_curve_border"
        app:layout_constraintTop_toTopOf="@+id/actionbar_lyt"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/rel_mobile_number"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bg_filter"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:id="@+id/txt_mobile_number"
                android:paddingTop="@dimen/_5sdp"
                android:textColor="@color/light_gray"
                android:fontFamily="@font/inter_regular"
                android:textSize="12sp"
                android:paddingLeft="@dimen/_13sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:text="@string/mobile_number"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:padding="@dimen/_5sdp"
                android:id="@+id/phone_number"
                android:background="@null"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="15"
                android:imeOptions="actionNext"
                android:textColor="@color/black"
                android:layout_below="@+id/txt_mobile_number"
                android:layout_marginLeft="@dimen/_7sdp"
                android:fontFamily="@font/inter_regular"
                android:textSize="13sp"
                android:hint="@string/enter_your_mobile_number"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"/>


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/rel_password"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rel_mobile_number"
            android:background="@drawable/bg_filter"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:id="@+id/txt_password"
                android:paddingTop="@dimen/_5sdp"
                android:textColor="@color/light_gray"
                android:fontFamily="@font/inter_regular"
                android:textSize="12sp"
                android:paddingLeft="@dimen/_13sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:text="@string/password"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:padding="@dimen/_5sdp"
                android:id="@+id/login_password"
                android:inputType="textPassword"
                android:background="@null"
                android:textColor="@color/black"
                android:singleLine="true"
                android:maxLength="20"
                android:imeOptions="actionDone"
                android:layout_below="@+id/txt_password"
                android:layout_marginLeft="@dimen/_7sdp"
                android:fontFamily="@font/inter_regular"
                android:textSize="13sp"
                android:hint="@string/enter_your_password"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_passwd"
                android:layout_width="@dimen/eye_width"
                android:layout_height="@dimen/eye_height"
                android:src="@drawable/ic_eye_closed"
                android:layout_below="@+id/txt_password"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10sp"
                android:layout_centerVertical="true"
                android:tint="@color/light_gray"
                android:layout_marginTop="@dimen/_10sdp"
                />
        </RelativeLayout>

        <CheckBox
            android:layout_width="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:button="@null"
            android:id="@+id/checkbox"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/custom_checkbox"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rel_password"
            android:layout_height="@dimen/_15sdp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/remember_me"
            android:fontFamily="@font/inter_regular"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintLeft_toRightOf="@+id/checkbox"
            app:layout_constraintTop_toBottomOf="@+id/rel_password"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/forgot_password"
            android:textSize="12sp"
            android:id="@+id/forgot_passwd_btn"
            app:fontFamily="@font/inter_semibold"
            android:textColor="@color/button_txt"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rel_password"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:background="@drawable/bg_button"
            android:backgroundTint="@color/button_txt"
            android:text="@string/login"
            android:id="@+id/login_btn"
            android:gravity="center"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/inter_semibold"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/forgot_passwd_btn"
            android:layout_height="@dimen/_35sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/view1"
            android:layout_marginBottom="@dimen/_30sdp"
            android:text="@string/dont_have_account_text"
            android:gravity="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/dont_have_account_btn"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="@dimen/_110sdp"
            android:id="@+id/view1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/background_border"
            android:backgroundTint="@color/black"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_height="@dimen/_4sdp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>