<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_5sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.travelRequest.TravelRequestTab3">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/nested_scroll_view"
        android:scrollbars="none"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/inter_semibold"
                android:padding="@dimen/_5sdp"
                android:id="@+id/title_txt"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/text_color"
                android:text="@string/are_you_travelling_alone"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/inter_regular"
                android:textSize="@dimen/_14sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:id="@+id/subtitle_txt"
                app:layout_constraintTop_toBottomOf="@+id/title_txt"
                android:textColor="#475467"
                android:text="@string/fill_details_of_your_travel"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:id="@+id/radioGroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subtitle_txt"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="match_parent"
                    android:id="@+id/yes_radio_btn"
                    android:text="@string/yes"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_filter"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:id="@+id/no_radio_btn"
                    android:text="@string/no"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_filter"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/yes_radio_btn"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/inter_regular"
                android:textSize="@dimen/_14sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/additional_traveller_txt"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                android:textColor="#475467"
                android:text="@string/additional_traveller"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@drawable/bg_filter"
                android:id="@+id/rel_spinner"
                app:layout_constraintTop_toBottomOf="@+id/additional_traveller_txt"
                android:padding="@dimen/_2sdp"
                android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:id="@+id/spinner"
                android:padding="@dimen/_2sdp"
                android:layout_height="wrap_content"/>
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/userRecyclerView"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_2sdp"
                app:layout_constraintTop_toBottomOf="@+id/rel_spinner"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>